# iot-wifi-setup

./: Cargo.toml  LICENSE  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: error.rs  http.rs  main.rs  time.rs  wifi.rs
src/server/: index.html  mod.rs
