[package]
name = "esp-wifi-web-setup"
version = "0.1.1"
edition = "2021"

[dependencies]
embedded-svc = { version = "0.27.1" }
esp-idf-hal = "0.43.1"
esp-idf-svc = { version = "0.48.1", features = ["experimental", "alloc", "std", "nightly"] }
embedded-io = "0.6.0"
esp-idf-sys = { version = "0.34.1", features = ["binstart"] }
log = "0.4.17"
serde = "1.0.143"
serde_json = "1.0.83"
thiserror = "1.0.32"
heapless = { version = "0.8.0", features = ["serde"] }
parking_lot = "0.12.1"
serde_urlencoded = "0.7.1"
time = { version = "0.3.17", features = ["macros", "formatting", "parsing"] }

[profile.release]
opt-level = "s"

[build-dependencies]
anyhow = "1.0.68"
embuild = "0.31.0"
